// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package chrome.dir_metadata;

option go_package = "infra/tools/dirmeta/proto;dirmetapb";

import "google/protobuf/wrappers.proto";

// Metadata information for a directory.
//
// Individual fields/subfields are inherited by subdirectories.
// For example, if a/DIR_METADATA specifies `monorail.project="chromium"` and
// a/b/DIR_METADATA file exists and does not specify `monorail.project`, then
// `a/b`'s Monorail project is "chromium".
// Note: this semantics can be extended to opt-out individual fields from
// inheritance.
message Metadata {
  // Monorail metadata. Its component field should always map to the same
  // team_email field (see below) for every directory that it is listed in.
  Monorail monorail = 1;

  // The team responsible for the directory. Only a single email is allowed.
  // For example, “team-email@chromium.org”.
  string team_email = 2;

  // The code in this directory is specific to this OS.
  OS os = 3;

  // WPT-specific metadata.
  WPT wpt = 4;

  // Reserved for metadata information for third-party code. See
  // https://opensource.google/docs/thirdparty/metadata/
  reserved 13;
  reserved "third_party";
}

// WPT is WebPlatformTest-specific metadata.
message WPT {
  // Whether wpt-importer should notify the team about new failures.
  //
  // Use BoolValue instead of boolean to distinguish false from absence of
  // value.
  google.protobuf.BoolValue notify = 1;
}

// Supported OS to tag a directory.
enum OS {
  OS_UNSPECIFIED = 0;
  LINUX = 1;
  WINDOWS = 2;
  MAC = 3;
  ANDROID = 4;
  IOS = 5;
  CHROME_OS = 6;
  FUCHSIA = 7;
}

// Monorail specific metadata.
message Monorail {
  // The Monorail project. For example, “chromium”.
  string project = 1;
  // The Monorail component. For example, “UI>Browser>Zoom”.
  // Only a single component is allowed.
  string component = 2;
}
